--- a/CET6/多义词.md
+++ b/CET6/多义词.md
@@ -4,3 +4,14 @@
     follow
     comply  with
     adhere to   
+
+
+委派:
+    appoint  正式任命
+    commision  farm out 委托式委派,付费/任务
+    mandate   授权式委派,有强制性
+    depute      代理式委派
+    delegate    授权+责任转移
+    assign      分配任务,没有授权
+    designate    指定某些人完成任务
+
