--- a/NativeNote/面试题/计算机网络.md
+++ b/NativeNote/面试题/计算机网络.md
@@ -1,5 +1,4 @@
-#
-
+# 基础
 ## OSI 七层网络
 1. 物理层: 物理媒介上原始的数据传输
 2. 数据链路层: 物理连接中提供可靠的传输,建立和维护两个相邻节点的链路
@@ -17,5 +16,78 @@
 
 ## TCP 三次握手四次挥手在那一层?
 传输层  ,负责端到端的通信服务,数据传输的建立,维护和终止
+ 
+
+# HTTP
+## HTTP 和 Https 的区别
+Https是 http的加强版,增加了SSL/TLS 协议,确保数据在传输过程中是加密的
+HTTP 的默认端口是80,HTTPS的默认端口是443
+
+## 为什么要用HTTPS ?
+ HTTP 是明文传输,存在数据窃听,数据篡改和身份伪造的问题
+ 
+### SSL/TLS 的加密 
+ 1. 非对称加密: 服务器向客户端发送公钥加密会话密钥,服务器用私钥解密密文,得到会话密钥
+ 2. 对称加密: 双方使用会话密钥加密通信
+客户端通过数字证书来验证服务器的身份,数字证书由CA机构签发,包含服务器的公钥,证书和签发机构,证书的有效期(身份伪造)
 
 
+## HTTPS 是如何建立连接的?
+ 和SSL/TLS 的握手有关, 握手阶段和数据传输阶段
+### 握手阶段 
+ 1. 客户端通过巴拉巴拉的过程向服务器发起请求
+ 2. 服务器返回自己的证书
+ 3. 客户端验证证书的合法性,合法就生成随机密钥,用服务器的公钥加密它,发给服务器
+ 4. 服务器收到后用私钥解密,得到会话密钥
+ 5. 双方通过会话密钥来加密通信
+ ==连接关闭,会话密钥被销毁,避免被破解. ==
+### 数据传输阶段 
+ 使用对称加密,用会话密钥加密通信内容
+## URL 会被加密吗?
+ https 会加密 url,但是完整的url会在浏览器历史记录和web服务器是明文可见的,
+ 敏感信息不可通过url 传递 
+
+## 中间人攻击
+ 在通信双方的两端插入自己, 向服务器伪造客户端身份,向客户端伪造服务器身份
+ 中间人获取服务器公钥,并伪造自己的公钥私钥对,劫持客户端对服务器的请求,让自己和客户端的通信是
+ 明文的 
+
+ > [!NOTE]
+ > 使用公钥加密和私钥解密的过程是服务器和客户端互相辨认身份的过程
+ > 确保双方是直接通信的,没有被中间人劫持.(中间人劫持要使用自己的公私钥)
+
+## HTTPS 抓包
+ 通过一个中间人伪造服务器证书,获取客户端信任,将客户端的请求转发给服务器
+ 用自己的根证书伪造服务器的域名和证书
+
+ ## CA签发保证证书的合法性
+  1. CA机构把持有者的公钥,用途,颁发者,有效时间打包并hash计算,得到hash值
+  2. CA 用自己的私钥把hash值加密,生成 certification signature, 添加到文件证书上,形成数字证书
+## 客户端校验合法性
+ 1. 浏览器校验域名一致和有效期
+ 2. 浏览器查找内置CA,校验颁发机构
+ 3. 使用CA同样的Hash算法获取Hash值h1, 用CA机构的公钥解密Cerfication Signature ,得到h2
+ 4. 比较h1 和 h2 
+
+ 由于 中间人没有CA 的私钥,无法正确加密hash值,也就无法伪造服务器身份
+
+## HTTP 无状态是什么
+ 每个http请求是独立的,服务器不会保留任何客户端请求信息
+ * 每个http请求都包含所有需要的信息,不依赖之间的请求信息
+ * 服务器不会记录任何客户端请求的状态
+
+### 状态记录(会话)
+ 1. cookies: 服务器set-cookies 响应头把信息存储在客户端中,客户端以后发送该cookie 维持状态
+ 2. session: 服务器生成唯一ID,存储在cookie中,并在服务器维护该会话关联的信息
+ 3. TOKEN:   JWT 等机制在客户端存储一个状态信息,每次请求中发送这个token.
+
+### cookie 和session的区别
+ | 特性            |     Cookie      |    session          |
+ | --------------- | --------------- | --------------- |
+ | 存储位置  | 客户端 | 服务器 |
+ | HTTP请求的位置| cookie | cookie |
+ | 有效期    |   长时间保持     | Session较短|
+ | 存储大小   |  不超过4k       |  很大|
+ | 存储类型 |  ASCII            | 任意类型|
+
+  
